Base image, index and background CSS added
No animation just yet

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sakurai.tv</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
