--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Sakurai.tv</title>
+    <!-- Begin Dianne -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
+
+    <!-- End Dianne -->
 </head>
 <body>
-
+<div>
+    <img src="images/sakurai.jpg" width="1920" height="1080">
+</div>
 </body>
 </html>
