--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 
 
     <!-- End Dianne -->
+    <!-- Begin Marc -->
+    <link rel="script" href="js/cssclass.js">
+    <link rel="script" href="js/time.js">
+
+
+    <!-- End Marc -->
 </head>
 <body>
 <div>
-    <img src="images/sakurai.jpg" width="1920" height="1080">
+    <img id="afbeelding" src="images/sakurai.jpg" width="1920" height="1080">
 </div>
 </body>
 </html>
