--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 
     <!-- End Dianne -->
     <!-- Begin Marc -->
-    <link rel="script" href="js/cssclass.js">
-    <link rel="script" href="js/time.js">
+    <script src="js/cssclass.js"></script>
+    <script src="js/base.js"></script>
+
+    <script src="js/time.js"></script>
+
+
+
 
 
     <!-- End Marc -->
@@ -20,4 +25,12 @@
     <img id="afbeelding" src="images/sakurai.jpg" width="1920" height="1080">
 </div>
 </body>
+<script>
+
+
+    window.onload= new function(){
+        onTime();
+        console.log("Window Loaded!");
+    };
+</script>
 </html>
