--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div>
-    <img src="images/sakurai.jpg" width="1920" height="1080">
+    <img src="images/sakurai.jpg">
 </div>
 </body>
 </html>
