Added GabeN Easter Egg

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="js/base.js"></script>
 
     <script src="js/time.js"></script>
+    <script src="js/gaben.js"></script>
 
 
 
@@ -37,6 +38,9 @@
 
         window.setTimeout(onNextSecond, 1000 );
         console.log("Window Loaded!");
+
+        gabifyConsole();
+
     };
 </script>
 </html>
