Kleine change in javascriptdocs.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          * 1 = An audio file like *.mp3 or *.wav
          * 2 = The id of a youtube video. The URL "https://www.youtube.com/watch?v=ls0smp7yHAs" becomes the id "ls0smp7yHAs". It is automatically looped.
          *
-         * Not Yet Implemented:
+         * Not Yet Implemented but reserved types:
          *
          * 3 = Vimeo.
          * 4 = Vine.
@@ -46,7 +46,10 @@
 
 
     </script>
+
     <script src="js/cssclass.js"></script>
+    <script src="js/stringutils.js"></script>
+    <script src="js/audio.js"></script>
     <script src="js/base.js"></script>
 
     <script src="js/time.js"></script>
