Logging when loaded now :question:

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
          * 4 = Vine.
          * @type {number}
          */
-        var audioType = 0;
+        var audioType = 1;
 
         /**
          * The SRC file for the audio loop.
          * Can be a normal file like a *.mp3, a *.wav, or a youtube embeded link.
          * @type {string}
          */
-        var audioSrc = "http://rill.loempiaisme.nl/mand.mp3";
+        var audioSrc = "https://gaben.amigocraft.net/sax.mp3";
 
 
     </script>
@@ -67,10 +67,10 @@
     <img id="afbeelding" src="images/sakurai.jpg">
 </div>
 <div id="counter">You have been worshipping for 0 seconds.</div>
-</body>
 <script>
 
 
     window.onload = onLoaded();
 </script>
+</body>
 </html>
