Zwoele muziek en temp geen Heer Gaben
:cry:

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          * Can be a normal file like a *.mp3, a *.wav, or a youtube embeded link.
          * @type {string}
          */
-        var audioSrc = "https://gaben.amigocraft.net/sax.mp3";
+        var audioSrc = "http://senpai.karatemaccie.nl/sax.mp3";
 
 
     </script>
@@ -53,7 +53,7 @@
     <script src="js/base.js"></script>
 
     <script src="js/time.js"></script>
-    <script src="js/gaben.js"></script>
+    <!--script src="js/gaben.js"></--script-->
 
 
 
