--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
          */
         var audioSrc = "http://senpai.karatemaccie.nl/sax.mp3";
 
+        /**
+         * The ID of an youtube playlist, used when specifing youtube. If you want to loop a single video, you can put the id of the video here.
+         * @type {string}
+         */
+        var audioPlaylist = "";
 
     </script>
 
