Uses herionmusic's livestream.

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
          * 4 = Vine.
          * @type {number}
          */
-        var audioType = 1;
+        var audioType = 2;
 
         /**
          * The SRC file for the audio loop.
          * Can be a normal file like a *.mp3, a *.wav, or a youtube embeded link.
          * @type {string}
          */
-        var audioSrc = "http://senpai.karatemaccie.nl/sax.mp3";
+        var audioSrc = "ojajik3vzB4";
 
         /**
          * The ID of an youtube playlist, used when specifing youtube. If you want to loop a single video, you can put the id of the video here.
          * @type {string}
          */
-        var audioPlaylist = "";
+        var audioPlaylist = "ojajik3vzB4";
 
     </script>
 
