--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         var audioSrc = "ojajik3vzB4";
 
         /**
-         * The ID of an youtube playlist, used when specifing youtube. If you want to loop a single video, you can put the id of the video here.
+         * The ID of an youtube playlist, used when specifing youtube. If you want to loop a single video, you can an comma , here.
          * @type {string}
          */
-        var audioPlaylist = "ojajik3vzB4";
+        var audioPlaylist = ",";
 
     </script>
 
