Added twitch support
Renamed doYoutube to doEmbed, for embeded players.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          * 0 = no audio :'(
          * 1 = An audio file like *.mp3 or *.wav
          * 2 = The id of a youtube video. The URL "https://www.youtube.com/watch?v=ls0smp7yHAs" becomes the id "ls0smp7yHAs". It is automatically looped.
-         *
+         * 5 = Twitch channel id.
          * Not Yet Implemented but reserved types:
          *
          * 3 = Vimeo.
