Multiple modules plus an april fools joke

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
          */
         var audioPlaylist = ",";
 
+        /**
+         * Enable or disable "Never Gonna give you up" as an April's Fools joke background music.
+         * @type {boolean}
+         */
+        var enableJoke = true;
+
     </script>
 
     <script src="js/cssclass.js"></script>
