CSS Fixes and fonts have been added

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <img id="afbeelding" src="images/sakurai.jpg">
 </div>
-<div id="counter">You have been worshipping for 0 seconds.</div>
+<div id="counter">You have been worshipping for 0 seconds.<br></div>
 <script>
 
 
