Terug naar sax.mp3

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
          * 4 = Vine.
          * @type {number}
          */
-        var audioType = 2;
+        var audioType = 1;
 
         /**
          * The SRC file for the audio loop.
          * Can be a normal file like a *.mp3, a *.wav, or a youtube embeded link.
          * @type {string}
          */
-        var audioSrc = "ojajik3vzB4";
+        var audioSrc = "http://senpai.karatemaccie.nl/sax.mp3";
 
         /**
          * The ID of an youtube playlist, used when specifing youtube. If you want to loop a single video, you can an comma , here.
